<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/registerContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/imageRegisterContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.09"
                android:gravity="center"
                android:orientation="vertical" >


            </LinearLayout>

            <LinearLayout
                android:id="@+id/registerFormContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.65"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <LinearLayout
                    android:id="@+id/textRegFieldsContainter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <EditText
                        android:id="@+id/registerUsername"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/text_view"
                        android:hint="@string/register_name"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />
                    
                    <EditText
                        android:id="@+id/registerSurname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/text_view"
                        android:hint="@string/register_surname"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <EditText
                        android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/text_view"
                        android:hint="@string/register_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <EditText
                        android:id="@+id/registerPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/text_view"
                        android:hint="@string/register_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <EditText
                        android:id="@+id/registerConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/text_view"
                        android:hint="@string/register_confirm_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/termsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.00"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/chkTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/viewTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/register_terms"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/submitRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_red_round"
                    android:text="@string/register_button"
                    android:textColor="@color/White" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>