<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout 
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        
        <LinearLayout 
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
	        android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.35">
        	    
        	<ImageView
            	android:id="@+id/loginImage"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:src="@drawable/logo"
            	android:layout_gravity="center"
            	
            	 />
     	    
        </LinearLayout>
        
        <LinearLayout
		    	android:id="@+id/loginFormContainer"
		    	android:layout_width="match_parent"
		    	android:layout_height="0dp"
		    	android:layout_weight="0.65"
		    	android:orientation="vertical"
		    	android:paddingLeft="@dimen/activity_horizontal_margin"
		    	android:paddingRight="@dimen/activity_horizontal_margin"
		    >
        	
               <LinearLayout
		    	android:id="@+id/textRegFieldsContainter"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical"
		    	android:padding="10dp"
		    	android:background="@drawable/text_view"
		  	>
		        <EditText
            		android:id="@+id/user_name"
            		android:layout_width="match_parent"
            		android:layout_height="50dp"
            		android:background="@drawable/text_view"
            		android:hint="@string/user_name_hint" 
            		android:layout_weight="0.5"
            		android:paddingLeft="10dp"
        		    android:paddingRight="10dp"
        		    android:layout_marginBottom="5dp"
        		    android:singleLine="true"
        		    android:maxLines="1"
            		>
        		</EditText>

        		<EditText
        		    android:id="@+id/pass_word"
        		    android:layout_width="match_parent"
        		    android:layout_height="50dp"
        		    android:background="@drawable/text_view"
        		    android:hint="@string/pass_word_hint" 
        		    android:layout_weight="0.5"
        		    android:paddingLeft="10dp"
        		    android:paddingRight="10dp"
            		android:singleLine="true"
            		android:maxLines="1"
            		android:password="true"
            		>
            		
        		</EditText>
		    
 	
		    </LinearLayout>
            
               	<Button
            	android:id="@+id/loginBtn"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:background="@drawable/button_blue_round"
            	android:text="@string/login_button_text"
            	android:textColor="@color/White"
            	android:layout_marginTop="10dp" />
            
               <LinearLayout
                   android:id="@+id/forgotContainer"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal" >

                   <Button
                       android:id="@+id/forgotPassword"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:layout_weight="0.2"
                       android:background="@drawable/button_lime_green_round"
                       android:text="@string/forgot_button_text"
                       android:textColor="@color/White" />

                   <Button
                       android:id="@+id/registerBtn"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.2"
                       android:layout_marginTop="10dp"
                       android:background="@drawable/button_red_round"
                       android:text="@string/register_button_text"
                       android:textColor="@color/White" />

               </LinearLayout>
		
         </LinearLayout>
         
    </LinearLayout>

</RelativeLayout>
