<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/splashContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >
        <!-- <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"
            android:text="@string/main_welcome"
            android:gravity="center|center_horizontal"/> -->

        <ImageView
            android:id="@+id/splashLogo"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo_description"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="0.7"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_blue_round"
            android:layout_weight="0.05"
            android:text="@string/register_text"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="@drawable/button_red_round"
            android:text="@string/login_text"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
